2003-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (RenderFreetype): Ensure that image storage
	class is set to DirectClass. Text rendering was not working
	properly on top of PseudoClass images.

2003-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Search for the shmctl() function.  Under current
	Cygwin, this is hiding in -lcygipc.

2003-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (uninstall-data-html): Pathnames were not computed
	correctly so documentation directories were not properly removed.
	* configure.ac: Don't override includedir.
	* Makefile.am: Guide subdirectory is no longer distributed.
	Improve header installation logic.
	* configure.ac: Append user-specified LIBS when linking
	libGraphicsMagick.

2003-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.0.4 released.  Bump CVS package
	version to "unreleased" 1.0.5 and libtool revision to 7 in order
	to avoid accidentally overwriting released 1.0.4 library.
	* lcms: Updated to LCMS 1.11.
	* VisualMagick/installer: Update to use new RTF files.

2003-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/reference/read/input_tim.miff: Adjusted due to
	ScaleColor5to8 fix on 2003-10-07

2003-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/draw.c (DrawComposite): Base64 encoded image was not
	being deallocated.  Bad memory leak.

2003-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Updated to use GNU Automake 1.7.8 and the very
	latest CVS libtool.

2003-10-07  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

        * Revised ScaleColor5to8 and ScaleColor6to8 macros again, to
	fill the low bits correctly.

2003-10-06  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/png.c (ReadOnePNGImage): PNG decoder would exit too
	early when reading image.png[0].

2003-10-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
